<resources>
    <string name="app_name">MyHealth</string>
    <string name="todo">TODO</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login_now">Login Now</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_in_with_facebook">Sign in with Facebook</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up.</string>
    <string name="or">or</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="register">Register</string>
    <string name="back">Back</string>
    <string name="gender">Gender</string>
    <string name="contact_number">Contact number</string>
    <string name="calculate_bmi">Calculate BMI</string>
    <string name="count_steps">Count steps</string>
    <string name="view_distance">View distance</string>
    <string name="logout">Logout</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="enter_password">Enter password</string>
    <string name="your_email_address">Your email address</string>
    <string name="submit">Submit</string>
    <string name="calculate">Calculate</string>
    <string name="result">Result</string>

    <string name="extremely_underweight">Extremely underweight</string>
    <string name="severely_underweight">Severely underweight</string>
    <string name="underweight">Underweight</string>
    <string name="normal">Normal</string>
    <string name="overweight">Overweight</string>
    <string name="obese_class_1">Obese Class 1 (Moderately obese)</string>
    <string name="obese_class_2">Obese Class 2 (Severely obese)</string>
    <string name="obese_class_3">Obese Class 3 (Extremely obese)</string>
    <string name="todo1">TODO</string>
    <string name="view_profile">View profile</string>

    <string name="facebook_app_id">454292015320777</string>
    <string name="fb_login_protocol_scheme">fb454292015320777</string>
    <string name="todo2">TODO</string>
    <string name="sign_out">Sign out</string>
    <string name="upload">Upload</string>
    <string name="next">Next</string>
    <string name="back_return">Back</string>
    <string name="select_image">Select image</string>
    <string name="todo8">TODO</string>
    <string name="steps">Count Steps</string>
    <string name="count_step">Count Steps</string>
    <string name="_0">0</string>
    <string name="take_picture">Take picture</string>
    <string name="todo7">TODO</string>
    <string name="todo9">TODO</string>
    <string name="update_name">Name</string>
    <string name="update_surname">Surname</string>
    <string name="update_gender">Gender</string>
    <string name="update_contact">Contact</string>
    <string name="update_password">Password</string>
    <string name="update_save">Save</string>
    <string name="update_cancel">Cancel</string>
    <string name="update_todo">TODO</string>
    <string name="update_email">Email</string>
    <string name="profile_name">Name</string>
    <string name="profile_surname">Surname</string>
    <string name="profile_gender">Gender</string>
    <string name="profile_contact_number">Contact number</string>
    <string name="profile_email_address">Email address</string>
    <string name="profile_password">Password</string>
    <string name="profile_go_back">Go back</string>
    <string name="update_profile">Update profile</string>
    <string name="view_exercises">View exercises</string>
    <string name="set_goals">Set goals</string>
    <string name="change_password">Change password</string>
    <string name="save_info">Save info</string>
    <string name="home">Home</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="reset">Reset</string>
    <string name="pause">Pause</string>
    <string name="start">Start</string>
    <string name="stopwatch">Stopwatch</string>
    <string name="squat">Squat</string>
    <string name="stretch">Stretch</string>
    <string name="show_information">Show information</string>
    <string name="enter_height_in_m">Enter height in m</string>
    <string name="enter_weight_in_kg_s">Enter weight in kg\'s</string>
    <string name="title_activity_location">Map</string>
    <string name="normal_map">Normal map</string>
    <string name="hybrid_map">Hybrid map</string>
    <string name="satellite_map">Satellite map</string>
    <string name="terrain_map">Terrain map</string>
    <string name="return_home">Return home</string>
    <string name="view_location">View location</string>
    <string name="go_home">Go home</string>

</resources>
