<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/khetho"
    tools:context=".HomePage">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        android:layout_marginStart="10sp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginEnd="10sp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40sp"
                android:contentDescription="@string/update_todo"
                android:src="@drawable/ic_jumping_rope"
                tools:ignore="ObsoleteLayoutParam" />

                <Button
                    android:id="@+id/btn_calculate_bmi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40sp"
                    android:background="@drawable/button_background"
                    android:text="@string/calculate_bmi"
                    android:textAllCaps="false"
                    android:textColor="@color/login_form_details_medium"/>

                <Button
                    android:id="@+id/count_steps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:background="@drawable/button_background"
                    android:text="@string/count_steps"
                    android:textAllCaps="false"
                    android:textColor="@color/login_form_details_medium"/>

                <Button
                    android:id="@+id/btn_exercises"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:background="@drawable/button_background"
                    android:text="@string/view_exercises"
                    android:textAllCaps="false"
                    android:textColor="@color/login_form_details_medium"/>

                <Button
                    android:id="@+id/btn_stopwatch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:background="@drawable/button_background"
                    android:text="@string/stopwatch"
                    android:textAllCaps="false"
                    android:textColor="@color/login_form_details_medium"/>

                <Button
                    android:id="@+id/btn_set_goals"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:background="@drawable/button_background"
                    android:text="@string/set_goals"
                    android:textAllCaps="false"
                    android:textColor="@color/login_form_details_medium"/>

                <Button
                    android:id="@+id/btn_take_picture"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:background="@drawable/button_background"
                    android:text="@string/take_picture"
                    android:textAllCaps="false"
                    android:textColor="@color/login_form_details_medium"/>

                <Button
                    android:id="@+id/btn_view_profile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:background="@drawable/button_background"
                    android:text="@string/view_profile"
                    android:textAllCaps="false"
                    android:textColor="@color/login_form_details_medium"/>

                <Button
                    android:id="@+id/btn_view_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:background="@drawable/button_background"
                    android:text="@string/view_location"
                    android:textAllCaps="false"
                    android:textColor="@color/login_form_details_medium"/>

                <Button
                        android:id="@+id/btn_logout"
                        android:layout_marginTop="10sp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button_background"
                        android:text="@string/logout"
                        android:textAllCaps="false"
                        android:textColor="@color/login_form_details_medium"/>

        </LinearLayout>
    </RelativeLayout>
</ScrollView>