<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/khetho"
    tools:context=".TakePicture">

    <ImageView
        android:layout_width="76dp"
        android:layout_height="64dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_jumping_rope"
        android:contentDescription="@string/todo7" />

    <ImageView
        android:id="@+id/camera_view"
        android:layout_marginTop="24dp"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:background="@drawable/khetho"
        android:contentDescription="@string/todo9" />

    <Button
        android:id="@+id/upload_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAllCaps="false"
        android:background="@drawable/button_background"
        android:textColor="@color/login_form_details_medium"
        android:text="@string/take_picture" />

    <Button
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/go_home"
        android:textAllCaps="false"
        android:textColor="@color/login_form_details_medium"
        android:background="@drawable/button_background"/>

</LinearLayout>