<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/khetho"
    tools:context=".Stopwatch">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        android:layout_marginStart="10sp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginEnd="10sp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40sp"
                android:contentDescription="@string/update_todo"
                android:src="@drawable/ic_jumping_rope"
                tools:ignore="ObsoleteLayoutParam" />

            <TextView
                android:id="@+id/stopwatch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40sp"
                android:padding="16dp"
                android:text="@string/_00_00_00"
                android:textAlignment="center"
                android:textColor="@color/login_form_details"
                android:textSize="60sp"/>

            <Button
                android:id="@+id/btn_start_watch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:background="@drawable/button_background"
                android:text="@string/start"
                android:textAllCaps="false"
                android:textColor="@color/login_form_details_medium"/>

            <Button
                android:id="@+id/btn_pause_watch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:background="@drawable/button_background"
                android:text="@string/pause"
                android:textAllCaps="false"
                android:textColor="@color/login_form_details_medium"/>

            <Button
                android:id="@+id/btn_reset_watch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:background="@drawable/button_background"
                android:text="@string/reset"
                android:textAllCaps="false"
                android:textColor="@color/login_form_details_medium"/>

            <Button
                android:id="@+id/back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:text="@string/go_home"
                android:textAllCaps="false"
                android:textColor="@color/login_form_details_medium"
                android:background="@drawable/button_background"/>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>