<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/khetho"
    tools:context=".CountSteps">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        android:layout_marginStart="10sp"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:layout_marginEnd="10sp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100sp"
                android:contentDescription="@string/update_todo"
                android:src="@drawable/ic_jumping_rope"
                tools:ignore="ObsoleteLayoutParam" />

                <TextView
                    android:id="@+id/step_counter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/count_step"
                    android:textAlignment="center"
                    android:textColor="@color/login_form_details"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/counter_results"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:textAlignment="center"
                    android:text="@string/_0"
                    android:textColor="@color/login_form_details"
                    android:textSize="60sp"/>

                <Button
                    android:id="@+id/back"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/return_home"
                    android:textAllCaps="false"
                    android:textColor="@color/login_form_details_medium"
                    android:background="@drawable/button_background"
                    app:layout_constraintTop_toBottomOf="@id/counter_results" />

        </LinearLayout>
    </RelativeLayout>
</ScrollView>